// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`date-interval-selector Renders \`date-interval-selector\` with custom props 1`] = `
<div>
  <div
    class="layout"
  >
    <div
      class="flex xs6"
    >
      <div
        class="layout column"
      >
        <date-time-picker-text-field-stub
          dateobjectpreparer="[Function]"
          label="Start date"
          name="tstart"
          roundhours="true"
          value="today-1d"
        />
        <date-time-picker-text-field-stub
          dateobjectpreparer="[Function]"
          label="End date"
          name="tstop"
          roundhours="true"
          value="today"
        />
      </div>
    </div>
    <div
      class="flex pl-1 xs6"
    >
      <c-quick-date-interval-type-field-stub
        item-value="function () { [native code] }"
        return-object=""
        value="[object Object]"
      />
      <div
        class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
      >
        <div
          class="v-input__control"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            class="v-input__slot"
            role="button"
          >
            <div
              class="v-select__slot"
            >
              <label
                class="v-label v-label--active theme--light"
                style="left: 0px; position: absolute;"
              >
                Time field
              </label>
              <div
                class="v-select__selections"
              >
                <div
                  class="v-select__selection v-select__selection--comma"
                >
                  Creation date
                </div>
                <input
                  aria-readonly="false"
                  autocomplete="off"
                  readonly="readonly"
                  type="text"
                />
              </div>
              <div
                class="v-input__append-inner"
              >
                <div
                  class="v-input__icon v-input__icon--clear"
                >
                  <button
                    aria-label="Clear Time field"
                    class="v-icon notranslate v-icon--link material-icons theme--light"
                    tabindex="-1"
                    type="button"
                  >
                    clear
                  </button>
                </div>
              </div>
              <div
                class="v-input__append-inner"
              >
                <div
                  class="v-input__icon v-input__icon--append"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate material-icons theme--light"
                  >
                    arrow_drop_down
                  </i>
                </div>
              </div>
              <input
                type="hidden"
                value="t"
              />
            </div>
            <div
              class="v-menu"
            >
              <!---->
            </div>
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`date-interval-selector Renders \`date-interval-selector\` with default props 1`] = `
<div>
  <div
    class="layout"
  >
    <div
      class="flex xs6"
    >
      <div
        class="layout column"
      >
        <date-time-picker-text-field-stub
          dateobjectpreparer="[Function]"
          label="Start date"
          name="tstart"
          value="now-3h"
        />
        <date-time-picker-text-field-stub
          dateobjectpreparer="[Function]"
          label="End date"
          name="tstop"
          value="now"
        />
      </div>
    </div>
    <div
      class="flex pl-1 xs6"
    >
      <c-quick-date-interval-type-field-stub
        item-value="function () { [native code] }"
        return-object=""
        value="[object Object]"
      />
      <div
        class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
      >
        <div
          class="v-input__control"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            class="v-input__slot"
            role="button"
          >
            <div
              class="v-select__slot"
            >
              <label
                class="v-label v-label--active theme--light"
                style="left: 0px; position: absolute;"
              >
                Time field
              </label>
              <div
                class="v-select__selections"
              >
                <div
                  class="v-select__selection v-select__selection--comma"
                >
                  Creation date
                </div>
                <input
                  aria-readonly="false"
                  autocomplete="off"
                  readonly="readonly"
                  type="text"
                />
              </div>
              <div
                class="v-input__append-inner"
              >
                <div
                  class="v-input__icon v-input__icon--clear"
                >
                  <button
                    aria-label="Clear Time field"
                    class="v-icon notranslate v-icon--link material-icons theme--light"
                    tabindex="-1"
                    type="button"
                  >
                    clear
                  </button>
                </div>
              </div>
              <div
                class="v-input__append-inner"
              >
                <div
                  class="v-input__icon v-input__icon--append"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate material-icons theme--light"
                  >
                    arrow_drop_down
                  </i>
                </div>
              </div>
              <input
                type="hidden"
                value="t"
              />
            </div>
            <div
              class="v-menu"
            >
              <!---->
            </div>
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
